fix alignment, re-size

--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -43,10 +43,12 @@ h1 {
 .grid {
   border: 2px #eaeaea solid; /*need shadow bottom*/
   height: 300px;
-  width: 300px;
+  width: 260px;
 	display : grid;
-  grid-template-rows: 75px 25px 125px 75px;
+  grid-template-rows: 65px 25px 145px 65px;
   grid-gap: 10px 0px 10px;
+	margin: 4em auto;
+
 }
 
 .a{
